--- a/infix_eval/ui/main.ui
+++ b/infix_eval/ui/main.ui
@@ -10,6 +10,12 @@
     <height>454</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>Infix Expression Evaluator</string>
   </property>
@@ -19,7 +25,14 @@
      <enum>QLayout::SetDefaultConstraint</enum>
     </property>
     <item>
-     <widget class="QGraphicsView" name="treeView"/>
+     <widget class="QGraphicsView" name="treeView">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
     </item>
     <item>
      <layout class="QFormLayout" name="formLayout">
